Refactored configuration